; ModuleID = '/home/carl/AnghaBench/zfs/lib/libuutil/extr_uu_misc.c_uu_error.c'
source_filename = "/home/carl/AnghaBench/zfs/lib/libuutil/extr_uu_misc.c_uu_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_uu_main_thread = common dso_local global i64 0, align 8
@_uu_main_error = common dso_local global i32 0, align 4
@uu_error_key_setup = common dso_local global i64 0, align 8
@UU_ERROR_UNKNOWN = common dso_local global i32 0, align 4
@uu_error_key = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uu_error() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* @_uu_main_thread, align 8
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %6

4:                                                ; preds = %0
  %5 = load i32, i32* @_uu_main_error, align 4
  store i32 %5, i32* %1, align 4
  br label %15

6:                                                ; preds = %0
  %7 = load i64, i64* @uu_error_key_setup, align 8
  %8 = icmp slt i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %6
  %10 = load i32, i32* @UU_ERROR_UNKNOWN, align 4
  store i32 %10, i32* %1, align 4
  br label %15

11:                                               ; preds = %6
  %12 = load i32, i32* @uu_error_key, align 4
  %13 = call i64 @pthread_getspecific(i32 %12)
  %14 = trunc i64 %13 to i32
  store i32 %14, i32* %1, align 4
  br label %15

15:                                               ; preds = %11, %9, %4
  %16 = load i32, i32* %1, align 4
  ret i32 %16
}

declare dso_local i64 @pthread_getspecific(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
